EventTag adjust FindByID
